Sun Feb 16 11:35:46 2020  Jiri (George) Lebl <jirka@5z.com>

	* *: Merged patch from Yavor Doganov porting to GTK3

Sun Feb 16 10:59:55 2020  Jiri (George) Lebl <jirka@5z.com>

	* configure.ac: Add patch to fix ncurses check
	  https://gitweb.gentoo.org/repo/gentoo.git/tree/sci-mathematics/genius/files/genius-1.0.23-tinfo.patch

Mon Dec 09 09:21:55 2019  Jiri (George) Lebl <jirka@5z.com>

	* compil.c: Fix encoding empty string, affected functions are
	  PrintTable and string

Wed Oct 24 20:33:24 2018  Jiri (George) Lebl <jirka@5z.com>

	* lib/linear_algebra/misc.gel: optimize the Make(Row)Vector functions
	  in case of vector input.

	* src/geniustests.txt: Add a bunch of tests

Wed Oct 24 13:38:31 2018  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c, src/funclibhelper.cP: Add AppendVector, plus a few
	  minor fixes
	
	* lib/sets/basic.gel: improve performance, and fix sets of vectors

	* lib/linear_algebra/misc.gel: Add MakeColumnVector (alias to
	  MakeVecctor), MakeRowVector

	* help/C/genius.xml: add docs for the new functions

Tue Oct 09 23:18:17 2018  Jiri (George) Lebl <jirka@5z.com>

	* examples/duffing-equation-trajectories.gel: Add a comment
	  for drawing only the last segment

Tue May 15 14:33:26 2018  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.24

Mon May 14 16:37:10 2018  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.h, src/gnome-genius.c, src/genius.c, vte/src/vte.c,
	  vte/src/Makefile.am: Be better at finding our termcap file

Sat Apr 07 21:18:25 2018  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.h, po/*.po: update the copyright string

	* po/POTFILES.skip: remove the vte files, no need to translate those

Sat Apr 07 20:54:58 2018  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: Fix crash

Sat Apr 07 18:10:46 2018  Jiri (George) Lebl <jirka@5z.com>

	* Add in internal version of a GTK 2.0 version of VTE  A temporary
	  fix.  When star trek future arrives, the GtkExtra stuff will be