@@ -1,3 +1,11 @@
+Sun Mar 01 15:31:07 2020  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: fix long label in solver
+
+	* src/gnome-genius.c: Add Yavor to the about box.
+
+	* src/calc.h: update copyright string
+
 Sun Feb 16 11:35:46 2020  Jiri (George) Lebl <jirka@5z.com>
 
 	* *: Merged patch from Yavor Doganov porting to GTK3
